# TA_GTI

./: .gitignore  CMakeLists.txt  Makefile.win  README.md  imageloader.cpp  imageloader.h  menu  menu.cpp  menu.h  obstacle.cpp  obstacle.h  roket.cpp  roket.dev  roket.h  roket.layout  void_runner  void_runner.cpp  void_runner_mac
include/: obstacle.h
src/: hypernova_escape.cpp  imageloader.cpp  obstacle.cpp  roket.cpp
